# reviews-scrape

./: Cargo.toml
datasources/: datasources.txt
result/: result_B01N52ZY3L.csv  result_B09KYJSTH2.csv
src/: datasources.rs  driver.rs  lib.rs  main.rs  scrape.rs
