[package]
name = "review_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
csv = "1.3.0"
serde = "1.0.197"
serde_derive = "1.0.197"
thirtyfour = "0.31.0"
thirtyfour-macros = "0.1.1"
tokio = { version = "1.36.0", features = ["tokio-macros", "rt", "rt-multi-thread"] }
